# ArykowGL

./: CMakeLists.txt
src/: main.c  main.cpp
